--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "chokidar-cli": "^1.2.0",
     "cross-env": "^5.0.1",
     "espower-typescript": "^8.0.0",
+    "hls.js": "^0.7.10",
     "husky": "^0.14.1",
     "json-loader": "^0.5.4",
     "lint-staged": "^4.0.0",
@@ -87,6 +88,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "@types/hls.js": "^0.7.3",
     "@types/remote-redux-devtools": "^0.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
